syntax = "proto2";
package easy_rec.protos;

message FM {
    optional float l2_regularization = 5 [default = 1e-4];
}
